test/libyul/yulSyntaxTests/zkevm/invalid/set_context_u128.yul
{
	$zk_set_context_u128()
}
// ====
// dialect: evm
// ----
// TypeError 7000: (3-23): Function "$zk_set_context_u128" expects 1 arguments but got 0.
